1A/tob/tob_n7/tps/.svn/pristine/19/19712caafc1bc951a6fba4fd9f0934b7357fdce2.svn-base
CercleTest.java:70: error: cannot find symbol
		Cercle C4 = new creerCercle(D, E);
		                ^
  symbol:   class creerCercle
  location: class CercleTest
1 error
